# kidur

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-ENTERPRISE  README.md  api-spec-v0.1.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/kidur-cli/: Cargo.toml
crates/kidur-cli/src/: main.rs
crates/kidur-core/: Cargo.toml
crates/kidur-core/src/: edge.rs  error.rs  field_value.rs  id.rs  lib.rs  node.rs  supertag_def.rs  visibility.rs
crates/kidur-crdt/: Cargo.toml
crates/kidur-crdt/src/: doc.rs  lib.rs  loro_doc.rs
crates/kidur-log/: Cargo.toml
crates/kidur-log/src/: lib.rs  mutation.rs
crates/kidur-supertag/: Cargo.toml
crates/kidur-supertag/src/: lib.rs  loader.rs  registry.rs  validator.rs
supertags/: document.toml  drawing.toml  email.toml  handwritten_note.toml  person.toml  quest.toml
