[package]
name = "kidur-log"
description = "Append-only .jsonl mutation log — the canonical data layer for Kidur"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
kidur-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
